# techno_c_1

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.c  run  weather.c  weather.h
include/: weather.h
include/input/: input.h
include/weather/: weather.h
src/: input.c  main.c  weather.c
test/: CMakeLists.txt  input.cpp  test_incorrect_input  test_input  weather.cpp
